added env and debug

--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "items",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
+    "start": "node src/index.js",
+    "start-dev": "nodemon . -q",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
